--- a/login.html
+++ b/login.html
@@ -20,6 +20,6 @@
     <input type="password"><br>
     <button type="submit">Login</button>
 </form>
-<p>Don't have an Account? <a href="https://localhost:8080/signup.html">Sign Up</a></p>
+<p>Don't have an Account? <a href="/signup">Sign Up</a></p>
 </body>
 </html>
