--- a/ntm.html
+++ b/ntm.html
@@ -21,15 +21,15 @@
 <h3>Welcome to NTM Organizations. We offer three very useful<br>and amazing tools just for the price of<br>10 KISSES A DAY!<br>Please pick ONE of our three distinct services.</h3>
 <div class="service">
 <h2>YouList</h2>
-<p>Laundry at 3!<br>Dinner at 5!<br>Avoid the hassle with <a href="https://localhost:8080/list.html">YouList!</a><br>This amazing list can help put<br>you life in order!!</p>
+<p>Laundry at 3!<br>Dinner at 5!<br>Avoid the hassle with <a href="/list.html">YouList!</a><br>This amazing list can help put<br>you life in order!!</p>
 
 <h2>YouLinks</h2>
 This song is so good!<br>
 Why can't I have all my<br>favorite songs a click<br>of a mouse away?<br>
-Well now you can with <a href="https://localhost:8080/links.html">YouLinks</a>.
+Well now you can with <a href="/links.html">YouLinks</a>.
 <h2>YouCalc</h2>
 225/15?!<br>Well not everyone can remember<br>it's 15, Well now you don't<br>
-have to with <a href="https://localhost:8080/calc.html">YouCalc</a>.
+have to with <a href="/calc.html">YouCalc</a>.
 </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <h6>Copyright NTM Organizations 2019©</h6>
