--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <h1>Log in to YouLinks</h1>
-<form action="https://localhost:8080/ntm.html">
+<form action="/ntm.html">
     E-mail:<br>
     <input type="email" id="email" pattern=".+@gmail.com" size="30" required><br>
     Password:<br>
