--- a/plan.html
+++ b/plan.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <h1>Sign Up</h1>
-<form action="https://localhost:8080/ntm.html">
+<form action="/ntm.html">
     <button type="submit">10 Kisses a day</button><br>
     <button type="submit">100 Kisses a month</button><br>
     <button type="submit">10,000 Kisses a year</button><br>
