--- a/plan.html
+++ b/plan.html
@@ -17,9 +17,9 @@
 <body>
 <h1>Sign Up</h1>
 <form action="/ntm.html">
-    <button type="submit">10 Kisses a day</button><br>
-    <button type="submit">100 Kisses a month</button><br>
-    <button type="submit">10,000 Kisses a year</button><br>
+    <button type="submit">10 USD a day</button><br>
+    <button type="submit">100 USD a month</button><br>
+    <button type="submit">10,000 USD a year</button><br>
 </form>
 </body>
 </html>
