--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <h1>Sign Up</h1>
-<form action="https://localhost:8080/plan.html">
+<form action="/ntm/plan.html">
     Name:<br>
     <input type="text"><br>
     E-mail:<br>
