--- a/plan.html
+++ b/plan.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <h1>Sign Up</h1>
-<form action="/ntm.html">
+<form action="/ntm/ntm.html">
     <button type="submit">10 USD a day</button><br>
     <button type="submit">100 USD a month</button><br>
     <button type="submit">10,000 USD a year</button><br>
