--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 </head>
 <body>
 <h1>Log in to YouLinks</h1>
-<form action="/ntm.html">
+<form action="/ntm/ntm.html">
     E-mail:<br>
     <input type="email" id="email" pattern=".+@gmail.com" size="30" required><br>
     Password:<br>
     <input type="password"><br>
     <button type="submit">Login</button>
 </form>
-<p>Don't have an Account? <a href="/signup">Sign Up</a></p>
+<p>Don't have an Account? <a href="/ntm/signup">Sign Up</a></p>
 </body>
 </html>
