--- a/ntm.html
+++ b/ntm.html
@@ -18,7 +18,7 @@
 </style>
 </head>
 <body>
-<h3>Welcome to NTM Organizations. We offer three very useful<br>and amazing tools just for the price of<br>10 KISSES A DAY!<br>Please pick ONE of our three distinct services.</h3>
+<h3>Welcome to NTM Organizations. We offer three very useful<br>and amazing tools just for the price of<br>10$ A DAY!<br>Please pick ONE of our three distinct services.</h3>
 <div class="service">
 <h2>YouList</h2>
 <p>Laundry at 3!<br>Dinner at 5!<br>Avoid the hassle with <a href="/ntm/list.html">YouList!</a><br>This amazing list can help put<br>you life in order!!</p>
